# driving-data-collection-reference-kit

./: LICENSE  README.md
calibration/cam_lib/: CMakeLists.txt  package.xml
calibration/cam_to_cam_non_overlap/: .gitignore  CMakeLists.txt  README.txt  find_cam_rel.cpp  save_tag_details.cpp
calibration/cam_to_cam_overlap/: .gitignore  CMakeLists.txt  README.txt  extrinsic_calib_singlecam.cpp  package.xml
calibration/transform_validation/: CMakeLists.txt
consolidate/consolidator/: consolidate.py
consolidate/datafile/: CMakeLists.txt  package.xml
consolidate/datafile/include/datainfile/: datafile.h
consolidate/datafile/msg/: ImageDataFile.msg
consolidate/datafile/src/: datafile.cpp
dashboard/: CMakeLists.txt  README  package.xml
dashboard/launch/: dboard.launch
dashboard/src/: dashboard.cpp
dashboard/web/mqttjs/src/: browserMqtt.js
dashboard/web/mqttjs_utility/: app.js  index.html
dashboard/web/mqttjs_utility/loadingbar/examples/: test.html
data_collection/calibration/cam_lib/: CMakeLists.txt
data_collection/calibration/cam_lib/include/cam_lib/: cam_base.h  ptgrey.h  usb_cam.h
data_collection/calibration/cam_lib/src/: cam_base.cpp  ptgrey.cpp  usb_cam.cpp
data_collection/calibration/cam_to_cam_non_overlap/: CMakeLists.txt  find_tag_rel.cpp  package.xml  save_cam_details.cpp  sheet_detail_creator.cpp
data_collection/calibration/cam_to_cam_overlap/: CMakeLists.txt  extrinsic_calib_multicam.cpp
data_collection/calibration/transform_validation/: package.xml  transform_validation.cpp
data_collection/consolidate/consolidator/: image_conversion.py  rosbag_reconstruct.py  rosbag_split.py
data_collection/consolidate/datafile/msg/: DataFile.msg
data_collection/dashboard/: CMakeLists.txt
data_collection/dashboard/web/mqttjs_utility/loadingbar/examples/: test1.html  test3.html
data_collection/sensors/cameras/usb/: CMakeLists.txt  package.xml
data_collection/sensors/cameras/usb/launch/: testing.launch  usb_cam-test.launch
data_collection/sensors/cameras/usb/nodes/: usb_cam_nodelet.cpp  usb_cam_wrapper.cpp  usb_cam_wrapper.h
data_collection/sensors/cameras/usb/params/: camera_dev_path.yaml
data_collection/sensors/cameras/usb/src/: usb_cam.cpp
data_collection/sensors/can/: CMakeLists.txt  README
data_collection/sensors/can/msg/: can_frame.msg  can_frame_array.msg
data_collection/sensors/can/src/: can.h  kvaser_can.cpp
data_extraction/: extract_data.py  updatedb.py
data_extraction/model/: setupdb.py
data_extraction/utils/: Logger.py
data_processing/: .gitignore  condaenv.yml
data_processing/data_extraction/: extract_data.py  updatedb.py
data_processing/model/: RawBagfile.py
data_processing/utils/: distance.py  md5hash.py
data_visualizer/: app.py  condaenv.yml  config.py  run.py
data_visualizer/app/: __init__.py  models.py  views.py
data_visualizer/app/static/css/: site.css
data_visualizer/app/templates/: base.html  index.html
data_visualizer/app/utils/: utils.py
docs/: data_processing.md  data_visualizer.md  design.md  example_stack.md
few-shot-annotations-AAAI-21/: README.md  fewshot_idd_annotations.csv
scripts/: camera_usb_port_mapper.py
sensors/cameras/usb/include/usb_cam/: usb_cam.h
sensors/cameras/usb/launch/: testing.launch  usb_cam-test.launch
sensors/cameras/usb/nodes/: usb_cam_node.cpp  usb_cam_wrapper.cpp  usb_cam_wrapper.h
sensors/cameras/usb/params/: camera_dev_path.yaml
sensors/cameras/usb/src/: usb_cam.cpp
sensors/can/: package.xml
sensors/can/launch/: kvaser.launch
sensors/can/src/: can_node.cpp
