<?xml version="1.0"?>

<package>
  
  <name>datainfile</name>
  <version>0.0.1</version>
  <description>The datainfile package</description>

  <maintainer email="ashish2x.kumar@intel.com">Ashish Kumar</maintainer>
  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
