<package>
  <name>ext_calib_transform_validation</name>
  <version>0.3.4</version>
  <description>Extrinisic calibration tool for transform validation</description>
 
  <maintainer email="venkata.ram.prasadx.vanguri@intel.com">vv ram prasad</maintainer>
  <author email="venkata.ram.prasadx.vanguri@intel.com">vv ram prasad</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend> 
  <build_depend>std_msgs</build_depend> 
  <build_depend>std_srvs</build_depend> 
  <build_depend>sensor_msgs</build_depend> 

  <run_depend>roscpp</run_depend> 
  <run_depend>std_msgs</run_depend> 
  <run_depend>std_srvs</run_depend> 
  <run_depend>sensor_msgs</run_depend> 
  <run_depend>ffmpeg</run_depend>
  
</package>
